# boost_is_terrible

./: CMakeLists.txt  README.md
terrible/: CMakeLists.txt  terrible.cpp
